account_generation/pyarmor.error.log
80862 MainProcess 2024-05-27 19:36:45,270
Traceback (most recent call last):
  File "/Users/christophermuller/miniconda3/envs/scyther/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 757, in main
    main_entry(sys.argv[1:])
  File "/Users/christophermuller/miniconda3/envs/scyther/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 745, in main_entry
    return args.func(ctx, args)
           ^^^^^^^^^^^^^^^^^^^^
  File "/Users/christophermuller/miniconda3/envs/scyther/lib/python3.11/site-packages/pyarmor/cli/__main__.py", line 237, in cmd_gen
    builder.process(options)
  File "/Users/christophermuller/miniconda3/envs/scyther/lib/python3.11/site-packages/pyarmor/cli/generate.py", line 164, in process
    self._obfuscate_scripts()
  File "/Users/christophermuller/miniconda3/envs/scyther/lib/python3.11/site-packages/pyarmor/cli/generate.py", line 122, in _obfuscate_scripts
    code = Pytransform3.generate_obfuscated_script(self.ctx, r)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/christophermuller/miniconda3/envs/scyther/lib/python3.11/site-packages/pyarmor/cli/core/__init__.py", line 106, in generate_obfuscated_script
    return m.generate_obfuscated_script(ctx, res)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 702, in generate_obfuscated_script
  File "/Users/christophermuller/miniconda3/envs/scyther/lib/python3.11/site-packages/pyarmor/cli/__init__.py", line 16, in process
    return meth(self, res, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<maker>", line 501, in process
  File "/Users/christophermuller/miniconda3/envs/scyther/lib/python3.11/site-packages/pyarmor/cli/resource.py", line 144, in reparse
    self.mtree = ast.parse(''.join(lines), self.frozenname, 'exec')
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/christophermuller/miniconda3/envs/scyther/lib/python3.11/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen account_generator_>", line 268
    def create_driver(proxy: str = None,config:Config, counter: int = 0):
                                        ^^^^^^^^^^^^^
SyntaxError: non-default argument follows default argument
